--- a/INSTALL
+++ b/INSTALL
@@ -221,10 +221,11 @@ ed with this version of Star Traders:
 | Operating system        | Arch   | Compiler                        | N |
 +-------------------------+--------+---------------------------------+---+
 | FreeBSD 11.2            | x86_64 | Clang (LLVM) 6.0.0              | 1 |
+| NetBSD 8.0              | x86_64 | GNU C Compiler 5.5.0            | 2 |
 | Solaris 11.3 (x86_64)   | i386   | GNU C Compiler 4.8.2            |   |
-| Solaris 11.3 (x86_64)   | x86_64 | GNU C Compiler 4.8.2            | 2 |
-| Solaris 11.3 (x86_64)   | i386   | Oracle Developer Studio 12.6    | 3 |
-| Solaris 11.3 (x86_64)   | x86_64 | Oracle Developer Studio 12.6    | 4 |
+| Solaris 11.3 (x86_64)   | x86_64 | GNU C Compiler 4.8.2            | 3 |
+| Solaris 11.3 (x86_64)   | i386   | Oracle Developer Studio 12.6    | 4 |
+| Solaris 11.3 (x86_64)   | x86_64 | Oracle Developer Studio 12.6    | 5 |
 | Cygwin 2.10.0 (Win7SP1) | i686   | GNU C Compiler 7.3.0            |   |
 +-------------------------+--------+---------------------------------+---+
 
@@ -236,9 +237,18 @@ Notes:
         ./configure --with-libiconv-prefix=/usr/local \
                     --with-libintl-prefix=/usr/local
 
-2.  Using "./configure CC='gcc -m64'" for 64-bit user-space.
-3.  Using "./configure CC='/opt/developerstudio12.6/bin/cc'".
-4.  Using "./configure CC='/opt/developerstudio12.6/bin/cc -m64'".
+2.  NetBSD with the gettext, libiconv and ncursesw packages installed with
+    "pkg_add", using:
+
+        ./configure --with-libiconv-prefix=/usr/pkg  \
+                    --with-libintl-prefix=/usr/pkg   \
+                    --with-ncursesw --with-ncurses   \
+                    CURSES_CFLAGS=-I/usr/pkg/include \
+                    LDFLAGS=-L/usr/pkg/lib
+
+3.  Using "./configure CC='gcc -m64'" for 64-bit user-space.
+4.  Using "./configure CC='/opt/developerstudio12.6/bin/cc'".
+5.  Using "./configure CC='/opt/developerstudio12.6/bin/cc -m64'".
 
 The following systems are known not to work at the current time; this list
 is almost certainly not exhaustive:
