--- a/po/es.po
+++ b/po/es.po
@@ -1,7 +1,7 @@
 # *************************************************************************
 # *                                                                       *
 # *                 Spanish Translations for Star Traders                 *
-# *                   Copyright (C) 2018, John Zaitseff                   *
+# *                 Copyright (C) 2018-19, John Zaitseff                  *
 # *                                                                       *
 # *************************************************************************
 #
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2018-08-24 16:18+1000\n"
-"PO-Revision-Date: 2018-07-27 06:35+1000\n"
+"PO-Revision-Date: 2019-01-05 07:36+1100\n"
 "Last-Translator: Francisco Javier Serrador <fserrador@gmail.com>\n"
 "Language-Team: Spanish <es@tp.org.es>\n"
 "Language: es\n"
