Move from Gitweb to CGit to browse repository history

--- a/NEWS
+++ b/NEWS
@@ -12,7 +12,7 @@ order to become the wealthiest player (the winner).
 The following history is presented in reverse chronological order.  If you
 would like to see  a list of detailed changes to this project,  you should
 browse  the Git repository on  The ZAP Group  web server  at the following
-location: https://www.zap.org.au/gitweb/trader.git
+location: https://www.zap.org.au/cgit/trader.git
 
 
 Version 7.13 (not yet released)
