--- a/README
+++ b/README
@@ -1,81 +1,79 @@
-**************************************************************************
-*                                                                        *
-*              Star Traders: A Game of Interstellar Trading              *
-*                 Copyright (C) 1990-2019, John Zaitseff                 *
-*                                                                        *
-**************************************************************************
+.. -*- mode: rst; coding: utf-8 -*-
 
-Welcome to  Star Traders!  This is a  simple game of interstellar trading,
-where the  objective is to create  companies, buy and  sell shares, borrow
+============================================
+Star Traders: A Game of Interstellar Trading
+============================================
+
+Welcome to Star Traders!  This is a simple game of interstellar trading,
+where the objective is to create companies, buy and sell shares, borrow
 and repay money, in order to become the wealthiest player (the winner).
 
 
 Installation
 ============
 
-Full instructions  for installing  Star Traders  are contained in the file
-INSTALL.  Please note that that file does NOT contain generic GNU Autoconf
-instructions!  For the impatient, the short version is:
+Full instructions for installing Star Traders are contained in the file
+`INSTALL`.  Please note that that file does *not* contain generic GNU
+Autoconf instructions!  For the impatient, the short version is::
 
     ./configure
     make
     make install
 
-The final command  needs to be run as the  system administrator (root), of
+The final command needs to be run as the system administrator (root), of
 course.
 
 
 How to Play
 ===========
 
-Star Traders  comes with quite  extensive in-built instructions on  how to
-play the game.  Start by running "trader" from the command line.  You will
-be prompted for  the number of players; from one to  eight people can play
-(although, in this  version, they will all have to  share the one keyboard
-and screen!).  After entering the names  of the players, you will have the
-opportunity to  read instructions  on how to  play the game.   Do so---and
-good luck in the game!
+Star Traders comes with quite extensive in-built instructions on how to
+play the game.  Start by running ``trader`` from the command line.  You
+will be prompted for the number of players; from one to eight people can
+play (although, in this version, they will all have to share the one
+keyboard and screen!).  After entering the names of the players, you will
+have the opportunity to read instructions on how to play the game.  Do
+so—and good luck in the game!
 
-The manual page for Star Traders contains more information on command line
-options, as well as some  suggestions for running a retro-computing green-
-screen nostalgia-tour  version of the game...  Try  running the following,
-for example (all on one line):
+The manual page for Star Traders contains more information on command
+line options, as well as some suggestions for running a retro-computing
+green-screen nostalgia-tour version of the game…  Try running the
+following, for example (all on one line)::
 
     xterm -g 80x24 -fa Mono -fs 18 -bg '#181818' -fg '#2CAB00' -bc +sb \
         +bdc +fbx -xrm 'XTerm*colorBD: #41FF00' -e trader --no-colour &
 
-To read the manual page, type "man trader" from the command line.
+To read the manual page, type ``man trader`` from the command line.
 
 
 Feedback
 ========
 
-Your comments, suggestions, corrections and enhancements are always warmly
-welcomed!  Please send these to:
+Your comments, suggestions, corrections and enhancements are always
+warmly welcomed!  Please send these to:
 
-    Postal:   John Zaitseff,
-              The ZAP Group,
-              Unit 6, 116 Woodburn Road,
-              Berala, NSW, 2141,
-              Australia
-
-    E-mail:   J.Zaitseff@zap.org.au
-    Web:      https://www.zap.org.au/software/trader/
-    FTP:      https://ftp.zap.org.au/pub/trader/
-              ftp://ftp.zap.org.au/pub/trader/
+    :Postal:  | John Zaitseff,
+              | The ZAP Group,
+              | Unit 6, 116 Woodburn Road,
+              | Berala, NSW, 2141,
+              | Australia
+    :Email:   | J.Zaitseff@zap.org.au
+    :Web:     | https://www.zap.org.au/software/trader/
+    :FTP:     | https://ftp.zap.org.au/pub/trader/
+              | ftp://ftp.zap.org.au/pub/trader/
 
 
 Copyright
 =========
 
-Copyright (C) 1990-2019, John Zaitseff.
+**Copyright © 1990–2019, John Zaitseff.**
 
-Star Traders is  free software that is distributed under  the terms of the
-GNU  General Public  License.  You  can redistribute  it and/or  modify it
-under  the  terms  of that  License  as  published  by the  Free  Software
+Star Traders is free software that is distributed under the terms of the
+GNU General Public License.  You can redistribute it and/or modify it
+under the terms of that License as published by the Free Software
 Foundation, either version 3 or (at your option) any later version.
 
-This game is  distributed in the hope that it will  be useful, but WITHOUT
-ANY  WARRANTY; without  even the  implied warranty  of  MERCHANTABILITY or
-FITNESS FOR A  PARTICULAR PURPOSE.  See the GNU  General Public License in
-the file COPYING for more details.
+This game is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License in
+the file `COPYING` for more details.
