--- a/data/README
+++ b/data/README
@@ -1,9 +1,8 @@
-**************************************************************************
-*                                                                        *
-*              Star Traders: A Game of Interstellar Trading              *
-*                 Copyright (C) 1990-2019, John Zaitseff                 *
-*                                                                        *
-**************************************************************************
+.. -*- mode: rst; coding: utf-8 -*-
 
-This directory, data, contains non-code data related to  Star Traders.  In
-particular, the desktop file and icons are located here.
+============================================
+Star Traders: A Game of Interstellar Trading
+============================================
+
+This directory, `data`, contains non-code data related to Star Traders.
+In particular, the desktop file and icons are located here.
