--- a/doc/README
+++ b/doc/README
@@ -1,9 +1,9 @@
-**************************************************************************
-*                                                                        *
-*              Star Traders: A Game of Interstellar Trading              *
-*                 Copyright (C) 1990-2019, John Zaitseff                 *
-*                                                                        *
-**************************************************************************
+.. -*- mode: rst; coding: utf-8 -*-
 
-This directory,  doc, contains documentation related to  Star Traders.  In
-particular, the Unix manual page for the game is in the file "trader.6".
+============================================
+Star Traders: A Game of Interstellar Trading
+============================================
+
+This directory, `doc`, contains documentation related to Star Traders.
+In particular, the Unix manual page for the game is in the file
+`trader.6`.
