--- a/po/README
+++ b/po/README
@@ -1,9 +1,10 @@
-**************************************************************************
-*                                                                        *
-*              Star Traders: A Game of Interstellar Trading              *
-*                 Copyright (C) 1990-2019, John Zaitseff                 *
-*                                                                        *
-**************************************************************************
+.. -*- mode: rst; coding: utf-8 -*-
 
-This directory,  po, contains translations  for text strings used  in Star
-Traders.  The GNU Gettext project is used for this purpose.
+============================================
+Star Traders: A Game of Interstellar Trading
+============================================
+
+This directory, `po`, contains translations for text strings used in Star
+Traders.  The `GNU Gettext project`__ is used for this purpose.
+
+__ https://www.gnu.org/software/gettext/
