--- a/src/README
+++ b/src/README
@@ -1,20 +1,19 @@
-**************************************************************************
-*                                                                        *
-*              Star Traders: A Game of Interstellar Trading              *
-*                 Copyright (C) 1990-2019, John Zaitseff                 *
-*                                                                        *
-**************************************************************************
+.. -*- mode: rst; coding: utf-8 -*-
 
-This directory, src, contains the  main source code for Star Traders.  The
-source code is split up among the following files:
+============================================
+Star Traders: A Game of Interstellar Trading
+============================================
 
-    trader.c    trader.h    - Main program, command-line interface
-    globals.c   globals.h   - Global game constants and variables
-    game.c      game.h      - Game start, end and (some) display functions
-    move.c      move.h      - Functions for making and processing a move
-    exch.c      exch.h      - Stock Exchange and Bank functions
-    fileio.c    fileio.h    - Load and save game file functions
-    help.c      help.h      - Help text functions: how to play the game
-    intf.c      intf.h      - Basic text input/output functions
-    utils.c     utils.h     - Utility functions needed by Star Traders
-    system.h                - All system header files are included here
+This directory, `src`, contains the main source code for Star Traders.
+The source code is split up among the following files:
+
+* `trader.c`,  `trader.h`:   Main program, command-line interface
+* `globals.c`, `globals.h`:  Global game constants and variables
+* `game.c`,    `game.h`:     Game start, end and (some) display functions
+* `move.c`,    `move.h`:     Functions for making and processing a move
+* `exch.c`,    `exch.h`:     Stock Exchange and Bank functions
+* `fileio.c`,  `fileio.h`:   Load and save game file functions
+* `help.c`,    `help.h`:     Help text functions: how to play the game
+* `intf.c`,    `intf.h`:     Basic text input/output functions
+* `utils.c`,   `utils.h`:    Utility functions needed by Star Traders
+* `system.h`:                All system header files are included here
