--- a/doc/trader.6
+++ b/doc/trader.6
@@ -41,7 +41,7 @@
 .if \n[.g] .mso www.tmac
 .\"
 .\" *********************************************************************
-.TH TRADER 6 "5th January, 2019" "Unix-like systems"
+.TH TRADER 6 "12th April, 2019" "Unix-like systems"
 .SH NAME
 trader \- a game of interstellar trading
 .\" *********************************************************************
@@ -199,7 +199,7 @@ Unit 6, 116 Woodburn Road,
 Berala, NSW, 2141,
 .br
 Australia
-.IP E-mail: 10n
+.IP Email: 10n
 .MTO J.Zaitseff@zap.org.au
 .PD 0
 .IP Web: 10n
