Move to the new ZAP Group website structure

--- a/README
+++ b/README
@@ -58,7 +58,7 @@ warmly welcomed!  Please send these to:
               | Berala, NSW, 2141,
               | Australia
     :Email:   | J.Zaitseff@zap.org.au
-    :Web:     | https://www.zap.org.au/software/trader/
+    :Web:     | https://www.zap.org.au/projects/trader/
     :FTP:     | https://ftp.zap.org.au/pub/trader/
               | ftp://ftp.zap.org.au/pub/trader/
 
