--- a/doc/trader.6
+++ b/doc/trader.6
@@ -203,7 +203,7 @@ Australia
 .MTO J.Zaitseff@zap.org.au
 .PD 0
 .IP Web: 10n
-.URL https://www.zap.org.au/software/trader/
+.URL https://www.zap.org.au/projects/trader/
 .IP FTP: 10n
 .URL https://ftp.zap.org.au/pub/trader/
 .br
@@ -278,6 +278,6 @@ correct bugs.  Now you, too, can run this small piece of computing
 history!
 .\" *********************************************************************
 .SH "SEE ALSO"
-.URL https://www.zap.org.au/software/trader/ "Star Traders home page"
+.URL https://www.zap.org.au/projects/trader/ "Star Traders home page"
 .\" *********************************************************************
 .\" End of file
