Mention adding the Brazilian Portugeuse translation

--- a/NEWS
+++ b/NEWS
@@ -23,7 +23,8 @@ __ https://www.zap.org.au/
 Version 7.14 (not yet released)
 -------------------------------
 
-(No changes yet)
+Added the Brazilian Portugeuse translation, with thanks to Rafael
+Fontenelle.
 
 
 Version 7.13 (13th November, 2019)
