Correct the language name from "Portugeuse" to "Portuguese"

--- a/NEWS
+++ b/NEWS
@@ -23,7 +23,7 @@ __ https://www.zap.org.au/
 Version 7.14 (not yet released)
 -------------------------------
 
-Added the Brazilian Portugeuse translation, with thanks to Rafael
+Added the Brazilian Portuguese translation, with thanks to Rafael
 Fontenelle.
 
 
